# nwcpp_pybind11

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
bindings/: CMakeLists.txt  demo.ipynb  python_bindings.cpp
cpp/: CMakeLists.txt  dataflow.cpp  dataflow.h
docs/: dataflow.doxygen  main_page.md
tests/: CMakeLists.txt  dataflow_tests.cpp  main.cpp
tests/python/: test_dataflow.py
